# colcon-ros-cargo

./: README.md
cargo-ros-install/: CMakeLists.txt  Cargo.toml  package.xml
cargo-ros-install/src/: lib.rs  main.rs
colcon-ros-cargo/: colcon.pkg  setup.cfg
colcon-ros-cargo/colcon_ros_cargo/argcomplete_completer/: ament_cargo_args.py
colcon-ros-cargo/colcon_ros_cargo/package_identification/: ament_cargo.py
colcon-ros-cargo/colcon_ros_cargo/task/ament_cargo/: build.py
colcon-ros-cargo/test/: test_flake8.py
